--- a/example/hello/demon.yaml
+++ b/example/hello/demon.yaml
@@ -1,7 +1,9 @@
-server:
-  host: 127.0.0.1
-  port: 3000
+servers:
+  $default:
+    server:
+      host: 127.0.0.1
+      port: 3000
   
-routes:
-  "/":
-    text: "Hello, world!"
+    routes:
+      "/":
+        text: "Hello, world!"
