--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@ fabric.properties
 
 # Don't commit pubspec lock file
 # (Library packages only! Remove pattern if developing an application package)
+.dart_tool
