--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,22 @@
 name: demon
-version: 1.0.0-beta
-description: Configuration-based, standalone HTTP server.
+version: 0.0.0
+description: Configuration-based, standalone Angel server.
 author: Tobe O <thosakwe@gmail.com>
-homepage:
+homepage: https://github.com/angel-dart/demon
+environment:
+  sdk: '>=2.0.0-dev <2.0.0'
 dependencies:
-  angel_common: ^1.0.0
+  angel_configuration: ^1.1.0
+  angel_framework: ^1.1.0
+  angel_http2: ^1.0.0
+  angel_proxy: ^1.1.0
+  angel_serialize: ^2.0.0
+  angel_static: ^1.3.0
+  build: ^0.12.0
+  build_cli_annotations: ^0.1.0
 dev_dependencies:
-  angel_test: ^1.0.0
+  angel_serialize_generator: ^2.0.0
+  angel_test: ^1.1.0
+  build_cli: ^0.1.0
+  build_runner: ^0.7.0
   test: ^0.12.0
